refat: organiza código